# visa-open

./: .env.example  .gitignore  README.md  all_cities.py  cloudflare.py  config.py  form.py  main.py  onecity.py  pyproject.toml  refactor-cleaner.md  requirements.txt  session.py  utils.py  verification.py
config/page/: __init__.py  page.py
pages/: check_dates.py  check_dates_for_all_visa_types_for_one_city.py  fill_form.py  login.py
utils/: __init__.py  otp_verification.py  send_mail.py
utils/check_elements/: __init__.py  is_cloudflare_bypass.py  is_loader_hide.py
utils/email/: otp_verification.py
