[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visa-open"
version = "0.1.0"
description = "A Python application that checks for specific available visa appointment dates every 10 minutes. When matching dates are found, they are logged or saved immediately for further processing or alerting."
authors = [
    { name = "kravchenski", email = "krasavamaks64@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
  "cloakbrowser[geoip]>=0.3.31",
  "playwright==1.51.0",
  "python-dotenv",
]

[tool.setuptools]
packages = []
